<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#AB47BC"
    android:gravity="center_horizontal|center_vertical"
    android:orientation="vertical"
    tools:context=".UserActivity">

    <TextView
        android:id="@+id/userTitle"
        android:layout_width="362dp"
        android:layout_height="wrap_content"
        android:text="@string/user_title"
        android:textAlignment="center"
        android:textColor="#FFAB91"
        android:textSize="20sp"
        android:textStyle="bold|italic" />

    <EditText
        android:id="@+id/user_name"
        android:layout_width="wrap_content"
        android:layout_height="72sp"
        android:layout_marginTop="50dp"
        android:autofillHints="Name"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="@string/user_name_hint"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp" />


    <TextView
        android:id="@+id/err_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:textColor="#FFCCBC"
        android:textSize="18sp"
        android:visibility="invisible" />

    <Button
        android:id="@+id/start_btn"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="194dp"
        android:layout_height="56dp"
        android:layout_marginTop="120dp"
        android:backgroundTint="@color/white"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:onClick="startQuiz"
        android:text="@string/start_btn_text"
        android:textColor="#8E24AA"
        android:textSize="16sp"
        android:textStyle="bold|italic"
        android:typeface="sans"
        app:cornerRadius="35dp" />


</LinearLayout>